# sc-audit-crew

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-reports.yml
src/sc_audit_crew/: crew.py  generate_pages.py  main.py  schemas.py  tools.py
src/sc_audit_crew/config/: agents.yaml  tasks.yaml
src/sc_audit_crew/knowledge/vectors/: V01.md  V02.md  V03.md  V04.md  V05.md  V06.md  V07.md  V08.md  V09.md  V10.md  V11.md  V12.md  V13.md  V14.md  V15.md  V16.md  V17.md  V18.md  V19.md
