[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-audit-crew"
version = "0.1.0"
description = "Smart Contract Security Audit Crew powered by CrewAI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "crewai[tools]>=1.11.0",
    "lancedb==0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "slither-analyzer>=0.10.0",
    "solc-select>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sc-audit = "sc_audit_crew.main:run"
